Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10385

cacheBuffer documentation misleading

    XMLWordPrintable

Details

    • ab030e931e05a060b4f6fabf4235f05aeb0c252c

    Description

      The documentation states: "This property holds the number of off-screen pixels to cache." This is misleading because:

      • we cache the instantiated element but not its painting (which seems to be implied by pixels)
      • the cache number is based on pixel-rows (or pixel-columns), not pixels.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes