Fix cacheBuffer documentation.

Task-number: QTBUG-10385